--- a/Building_Star_Trek_Corpus.ipynb
+++ b/Building_Star_Trek_Corpus.ipynb
@@ -15,7 +15,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": 1,
       "metadata": {},
       "outputs": [
         {
@@ -26,8 +26,8 @@
             "Requirement already satisfied: pandas in ./venv/lib/python3.8/site-packages (2.0.1)\n",
             "Requirement already satisfied: tqdm in ./venv/lib/python3.8/site-packages (4.65.0)\n",
             "Requirement already satisfied: jsonlines in ./venv/lib/python3.8/site-packages (3.1.0)\n",
-            "Requirement already satisfied: tzdata>=2022.1 in ./venv/lib/python3.8/site-packages (from pandas) (2023.3)\n",
             "Requirement already satisfied: python-dateutil>=2.8.2 in ./venv/lib/python3.8/site-packages (from pandas) (2.8.2)\n",
+            "Requirement already satisfied: tzdata>=2022.1 in ./venv/lib/python3.8/site-packages (from pandas) (2023.3)\n",
             "Requirement already satisfied: numpy>=1.20.3 in ./venv/lib/python3.8/site-packages (from pandas) (1.24.3)\n",
             "Requirement already satisfied: pytz>=2020.1 in ./venv/lib/python3.8/site-packages (from pandas) (2023.3)\n",
             "Requirement already satisfied: attrs>=19.2.0 in ./venv/lib/python3.8/site-packages (from jsonlines) (23.1.0)\n",
@@ -45,7 +45,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 106,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -58,7 +58,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 132,
+      "execution_count": 3,
       "metadata": {
         "id": "o7vCSUv2akaB"
       },
@@ -92,7 +92,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 134,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -363,7 +363,7 @@
               "[813 rows x 13 columns]"
             ]
           },
-          "execution_count": 134,
+          "execution_count": 4,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -375,7 +375,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 135,
+      "execution_count": 5,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -392,7 +392,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 136,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -404,7 +404,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 140,
+      "execution_count": 7,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -414,14 +414,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 141,
+      "execution_count": 8,
       "metadata": {},
       "outputs": [
         {
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "Iterating script files: 100%|██████████| 509/509 [00:00<00:00, 2432.14it/s]\n"
+            "Iterating script files: 100%|██████████| 509/509 [00:00<00:00, 1489.64it/s]\n"
           ]
         }
       ],
@@ -431,12 +431,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 142,
+      "execution_count": 9,
       "metadata": {},
       "outputs": [],
       "source": [
-        "df.to_csv('data.csv')"
+        "df.to_csv('corpus.csv', index=False)"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
     }
   ],
   "metadata": {
