--- a/Building_Star_Trek_Corpus.ipynb
+++ b/Building_Star_Trek_Corpus.ipynb
@@ -345,69 +345,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": 35,
       "metadata": {},
       "outputs": [],
       "source": [
         "def get_all_lines():\n",
-        "    return pd.DataFrame(iter_all_lines()).sort_values(['airdate','ep','line'])\n"
+        "    return pd.DataFrame(iter_all_lines()).sort_values(['airdate','ep','line']).rename_axis('_i')\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": 37,
       "metadata": {},
       "outputs": [
         {
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "Iterating script files: 100%|██████████| 509/509 [00:00<00:00, 1584.49it/s]\n"
+            "Iterating script files: 100%|██████████| 509/509 [00:00<00:00, 2508.19it/s]\n"
           ]
-        }
-      ],
-      "source": [
-        "df = get_all_lines()"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 32,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "df.to_csv('corpus.csv', index=False)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 33,
-      "metadata": {},
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "series\n",
-              "voy    69482\n",
-              "ds9    67190\n",
-              "tng    63894\n",
-              "Name: count, dtype: int64"
-            ]
-          },
-          "execution_count": 33,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
-        "df.series.value_counts()"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 34,
-      "metadata": {},
-      "outputs": [
+        },
         {
           "data": {
             "text/html": [
@@ -438,6 +395,18 @@
               "      <th>character</th>\n",
               "      <th>text</th>\n",
               "      <th>modifier</th>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>_i</th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
               "    </tr>\n",
               "  </thead>\n",
               "  <tbody>\n",
@@ -580,6 +549,7 @@
             ],
             "text/plain": [
               "           airdate series      ep  scene location  line character   \n",
+              "_i                                                                  \n",
               "67190   1987-09-28    tng  s01e01      1  unknown     1    PICARD  \\\n",
               "67191   1987-09-28    tng  s01e01      2   Bridge     2    PICARD   \n",
               "67192   1987-09-28    tng  s01e01      2   Bridge     3      DATA   \n",
@@ -593,6 +563,7 @@
               "200565  2001-05-23    voy  s07e25     72   Bridge   810   JANEWAY   \n",
               "\n",
               "                                                     text   modifier  \n",
+              "_i                                                                    \n",
               "67190   Captain's log, stardate 41153.7. Our destinati...  voiceover  \n",
               "67191   You will agree, Data, that Starfleet's orders ...        NaN  \n",
               "67192   Difficult? Simply solve the mystery of Farpoin...        NaN  \n",
@@ -608,7 +579,269 @@
               "[200566 rows x 9 columns]"
             ]
           },
-          "execution_count": 34,
+          "execution_count": 37,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "df = get_all_lines()\n",
+        "df"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 38,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "df.to_csv('corpus.csv', index=True)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 39,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "series\n",
+              "voy    69482\n",
+              "ds9    67190\n",
+              "tng    63894\n",
+              "Name: count, dtype: int64"
+            ]
+          },
+          "execution_count": 39,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "df.series.value_counts()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 40,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>airdate</th>\n",
+              "      <th>series</th>\n",
+              "      <th>ep</th>\n",
+              "      <th>scene</th>\n",
+              "      <th>location</th>\n",
+              "      <th>line</th>\n",
+              "      <th>character</th>\n",
+              "      <th>text</th>\n",
+              "      <th>modifier</th>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>_i</th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>67190</th>\n",
+              "      <td>1987-09-28</td>\n",
+              "      <td>tng</td>\n",
+              "      <td>s01e01</td>\n",
+              "      <td>1</td>\n",
+              "      <td>unknown</td>\n",
+              "      <td>1</td>\n",
+              "      <td>PICARD</td>\n",
+              "      <td>Captain's log, stardate 41153.7. Our destinati...</td>\n",
+              "      <td>voiceover</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>67191</th>\n",
+              "      <td>1987-09-28</td>\n",
+              "      <td>tng</td>\n",
+              "      <td>s01e01</td>\n",
+              "      <td>2</td>\n",
+              "      <td>Bridge</td>\n",
+              "      <td>2</td>\n",
+              "      <td>PICARD</td>\n",
+              "      <td>You will agree, Data, that Starfleet's orders ...</td>\n",
+              "      <td>NaN</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>67192</th>\n",
+              "      <td>1987-09-28</td>\n",
+              "      <td>tng</td>\n",
+              "      <td>s01e01</td>\n",
+              "      <td>2</td>\n",
+              "      <td>Bridge</td>\n",
+              "      <td>3</td>\n",
+              "      <td>DATA</td>\n",
+              "      <td>Difficult? Simply solve the mystery of Farpoin...</td>\n",
+              "      <td>NaN</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>67193</th>\n",
+              "      <td>1987-09-28</td>\n",
+              "      <td>tng</td>\n",
+              "      <td>s01e01</td>\n",
+              "      <td>2</td>\n",
+              "      <td>Bridge</td>\n",
+              "      <td>4</td>\n",
+              "      <td>PICARD</td>\n",
+              "      <td>As simple as that.</td>\n",
+              "      <td>NaN</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>67194</th>\n",
+              "      <td>1987-09-28</td>\n",
+              "      <td>tng</td>\n",
+              "      <td>s01e01</td>\n",
+              "      <td>2</td>\n",
+              "      <td>Bridge</td>\n",
+              "      <td>5</td>\n",
+              "      <td>TROI</td>\n",
+              "      <td>Farpoint Station. Even the name sounds mysteri...</td>\n",
+              "      <td>NaN</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>...</th>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>200561</th>\n",
+              "      <td>2001-05-23</td>\n",
+              "      <td>voy</td>\n",
+              "      <td>s07e25</td>\n",
+              "      <td>72</td>\n",
+              "      <td>Bridge</td>\n",
+              "      <td>806</td>\n",
+              "      <td>JANEWAY</td>\n",
+              "      <td>You'd better get down there, Tom.</td>\n",
+              "      <td>NaN</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>200562</th>\n",
+              "      <td>2001-05-23</td>\n",
+              "      <td>voy</td>\n",
+              "      <td>s07e25</td>\n",
+              "      <td>72</td>\n",
+              "      <td>Bridge</td>\n",
+              "      <td>807</td>\n",
+              "      <td>PARIS</td>\n",
+              "      <td>Yes, ma'am.</td>\n",
+              "      <td>NaN</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>200563</th>\n",
+              "      <td>2001-05-23</td>\n",
+              "      <td>voy</td>\n",
+              "      <td>s07e25</td>\n",
+              "      <td>72</td>\n",
+              "      <td>Bridge</td>\n",
+              "      <td>808</td>\n",
+              "      <td>JANEWAY</td>\n",
+              "      <td>Mister Chakotay, the helm.</td>\n",
+              "      <td>NaN</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>200564</th>\n",
+              "      <td>2001-05-23</td>\n",
+              "      <td>voy</td>\n",
+              "      <td>s07e25</td>\n",
+              "      <td>72</td>\n",
+              "      <td>Bridge</td>\n",
+              "      <td>809</td>\n",
+              "      <td>CHAKOTAY</td>\n",
+              "      <td>Aye, Captain.</td>\n",
+              "      <td>NaN</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>200565</th>\n",
+              "      <td>2001-05-23</td>\n",
+              "      <td>voy</td>\n",
+              "      <td>s07e25</td>\n",
+              "      <td>72</td>\n",
+              "      <td>Bridge</td>\n",
+              "      <td>810</td>\n",
+              "      <td>JANEWAY</td>\n",
+              "      <td>Set a course for home.</td>\n",
+              "      <td>NaN</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "<p>200566 rows × 9 columns</p>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "           airdate series      ep  scene location  line character   \n",
+              "_i                                                                  \n",
+              "67190   1987-09-28    tng  s01e01      1  unknown     1    PICARD  \\\n",
+              "67191   1987-09-28    tng  s01e01      2   Bridge     2    PICARD   \n",
+              "67192   1987-09-28    tng  s01e01      2   Bridge     3      DATA   \n",
+              "67193   1987-09-28    tng  s01e01      2   Bridge     4    PICARD   \n",
+              "67194   1987-09-28    tng  s01e01      2   Bridge     5      TROI   \n",
+              "...            ...    ...     ...    ...      ...   ...       ...   \n",
+              "200561  2001-05-23    voy  s07e25     72   Bridge   806   JANEWAY   \n",
+              "200562  2001-05-23    voy  s07e25     72   Bridge   807     PARIS   \n",
+              "200563  2001-05-23    voy  s07e25     72   Bridge   808   JANEWAY   \n",
+              "200564  2001-05-23    voy  s07e25     72   Bridge   809  CHAKOTAY   \n",
+              "200565  2001-05-23    voy  s07e25     72   Bridge   810   JANEWAY   \n",
+              "\n",
+              "                                                     text   modifier  \n",
+              "_i                                                                    \n",
+              "67190   Captain's log, stardate 41153.7. Our destinati...  voiceover  \n",
+              "67191   You will agree, Data, that Starfleet's orders ...        NaN  \n",
+              "67192   Difficult? Simply solve the mystery of Farpoin...        NaN  \n",
+              "67193                                  As simple as that.        NaN  \n",
+              "67194   Farpoint Station. Even the name sounds mysteri...        NaN  \n",
+              "...                                                   ...        ...  \n",
+              "200561                  You'd better get down there, Tom.        NaN  \n",
+              "200562                                        Yes, ma'am.        NaN  \n",
+              "200563                         Mister Chakotay, the helm.        NaN  \n",
+              "200564                                      Aye, Captain.        NaN  \n",
+              "200565                             Set a course for home.        NaN  \n",
+              "\n",
+              "[200566 rows x 9 columns]"
+            ]
+          },
+          "execution_count": 40,
           "metadata": {},
           "output_type": "execute_result"
         }
